Experience component horizontal scroll fixed.

--- a/src/scss/components/_experience.scss
+++ b/src/scss/components/_experience.scss
@@ -10,7 +10,13 @@
 
         h2 {
             margin-bottom: 45px;
-            font-size: 3.583rem;
+            font-size: 2rem;
+        }
+    }
+
+    @media (min-width: $breakpoint-xlarge) {
+        h2 {
+            font-size: 3.183rem;
         }
     }
 
